--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,41 @@
+spring:
+  profiles:
+    active: dev
+  # 共享設定
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/bionime_db?serverTimezone=Asia/Taipei
+    username: root
+    password: root
 
+  jpa:
+    database: mysql
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+---
+# 生產環境配置
+server:
+  port: 80
+
+spring:
+  config:
+    activate:
+      on-profile: pro
+  jpa:
+    hibernate:
+      ddl-auto: none # 生產環境不自動更新 table
+
+---
+# 開發環境配置
+server:
+  port: 81
+
+spring:
+  config:
+    activate:
+      on-profile: dev
+  jpa:
+    hibernate:
+      ddl-auto: update #測試環境自動更新 table
